--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#317EFB" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
 </head>
 
     <!--
@@ -48,3 +48,4 @@
 </script>
   </body>
 </html>
+
